src/components/process/snapshots/dreidel__components__process__tests__kill_confirm_dialog.snap
---
source: src/components/process/mod.rs
expression: terminal.backend()
---
"┌ [P]rocesses ─────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                     ┌ Kill Process ───────────────────┐                      │"
"│                     │  Kill "my-process" (pid 1234)?  │                      │"
"│                     │                                 │                      │"
"│                     │      [ OK ]    [ Cancel ]       │                      │"
"│                     │                                 │                      │"
"│                     └─────────────────────────────────┘                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
