src/components/process/snapshots/dreidel__components__process__tests__renders_process_list.snap
---
source: src/components/process/mod.rs
expression: terminal.backend()
---
"┌ [P]rocesses ─────────────────────────────────────────────────────────────────────────────────────┐"
"│PID     UID     Name                                                   CPU%▼   MEM      Status    │"
"│12345   ray     firefox                                                18.4    3.2%     running   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
