src/components/process/snapshots/dreidel__components__process__tests__tree_view_fullscreen.snap
---
source: src/components/process/mod.rs
expression: terminal.backend()
---
"┌ [P]rocesses [tree] ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│PID     UID        PR   NI   VIRT       RES        SHR        S  %CPU▼  %MEM   TIME       Command                                         │"
"│1       root       20   0    176.2 MB   12.6 MB    8.4 MB     S  0.1    0.1    05:23      /sbin/init                                      │"
"│12345   ray        15   -5   2147.5 MB  536.9 MB   134.2 MB   R  18.4   3.2    02:03      ├── firefox                                     │"
"│500     root       20   0    15.7 MB    5.2 MB     3.1 MB     S  0.0    0.0    00:01      └── /usr/sbin/sshd                              │"
"│501     ray        20   0    12.6 MB    4.2 MB     2.1 MB     S  0.1    0.0    00:00          └── /bin/bash                               │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
